# job-hunter-ai

./: .gitignore  AGENTS.md  README.md  pyproject.toml  spike_results_axine_friss.json
.github/workflows/: ci.yml
.hermes/desktop-attachments/: Alina_Aseeva_CV_Lido_UPDATED_clean.pages  Alina_Aseeva_CV_Lido_Updated.md  Alina_Aseeva_CV_Updated.md
config/: ranking_weights.json  source_config.yaml
demo/: generate_html_report.py  streamlit_delivery_demo.py
docs/architecture/: README.md  implementation-plan-sources.md  implementation-plan.md
docs/decisions/: README.md  adr-001-rebase-small-prs-and-autonomous-loop.md  adr-002-sources-prioritization-web3-dao-ops.md  ashby-connector-pr.md  phase-5-verification-lessons.md
docs/implementation-plans/: cv-tailoring-pipeline.md  pipeline-quality-autonomous-loop.md
docs/plans/: implementation-plan-job-aggregator-ranking.md
docs/prd/: README.md
docs/research/: README.md  source-inventory.md  target-segment.md
docs/specs/: README.md  canonical-job-schema.md  source-contract.md  source-validation-and-ghost-signals.md  storage-model.md
evals/: README.md  run_source_quality_eval.py  run_telegram_noise_eval.py
evals/datasets/: README.md
evals/harness/: README.md  precision_topk.py
evals/rubrics/: README.md  (+6 more)
ops/: README.md
reports/: telemetry_20260713_130856.json
scripts/: README.md  autonomous_cycle.py  generate_ashby_fixture.py  generate_lever_fixture.py  run_pipeline_on_cv.py  spike_tailor_axine_friss.py
sources/: fetch_protocol_stubs.py  load_protocol_seeds.py  protocol_seeds.yaml
tests/: README.md
(+149 files in other folders)
